no effects overflow fix

--- a/assets/css/_general.less
+++ b/assets/css/_general.less
@@ -22,6 +22,7 @@ article {
     position: relative;
     .part {
         min-height: 100vh;
+        z-index: 1;
         .background_gradient {
             background: rgba(0, 0, 0, 0.6);
             background: -moz-linear-gradient(left, rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0) 100%);
